--- a/php-7.2.11/common/php.ini
+++ b/php-7.2.11/common/php.ini
@@ -429,7 +429,7 @@ track_errors = Off
 ;error_append_string = "</font>"
 
 ; Log errors to specified file.
-error_log = ${WORK_ROOT}/log/php/php-error.log
+error_log = ${WORK_ROOT}/php/log/php-error.log
 
 ; Log errors to syslog (Event Log on NT, not valid in Windows 95).
 ;error_log = syslog
