--- a/php-7.2.11/common/php-fpm.conf
+++ b/php-7.2.11/common/php-fpm.conf
@@ -22,14 +22,14 @@
 ; Pid file
 ; Note: the default prefix is ${WORK_ROOT}/php/var
 ; Default Value: none
-pid = ${WORK_ROOT}/var/php-fpm.pid
+pid = ${WORK_ROOT}/php/var/php-fpm.pid
 
 ; Error log file
 ; If it's set to "syslog", log is sent to syslogd instead of being written
 ; in a local file.
 ; Note: the default prefix is ${WORK_ROOT}/php/var
 ; Default Value: log/php-fpm.log
-error_log = ${WORK_ROOT}/log/php/php-fpm.log
+error_log = ${WORK_ROOT}/php/log/php-fpm.log
 
 ; syslog_facility is used to specify what type of program is logging the
 ; message. This lets syslogd specify that messages from different facilities
@@ -156,7 +156,7 @@ daemonize = yes
 ;                            specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-listen = ${WORK_ROOT}/var/php-cgi.sock
+listen = ${WORK_ROOT}/php/var/php-cgi.sock
 
 ; Set listen(2) backlog.
 ; Default Value: 128 (-1 on FreeBSD and OpenBSD)
