--- a/php-7.2.11/common/php-fpm.conf
+++ b/php-7.2.11/common/php-fpm.conf
@@ -428,7 +428,7 @@ pm.max_requests = 10000
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-slowlog = ${WORK_ROOT}/log/php/php-fpm-slow.log
+slowlog = ${WORK_ROOT}/php/log/php/php-fpm-slow.log
  
 ; The timeout for serving a single request after which a PHP backtrace will be
 ; dumped to the 'slowlog' file. A value of '0s' means 'off'.
